[tool.poetry]
name = "redis-sdk"
version = "1.0.0"
description = "Serverless Redis SDK from Khulnasoft"
license = "MIT"
authors = ["Khulnasoft <support@khulnasoft.com>", "Md Sulaiman <infosulaimanbd@gmail.com>"]
maintainers = ["Khulnasoft <support@khulnasoft.com>"]
readme = "README.md"
repository = "https://github.com/khulnasoft-lab/redispy"
keywords = ["Khulnasoft Redis", "Serverless Redis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries",
]
packages = [{ include = "redis_sdk" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.4.1"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
